# pdfcat

./: README.md  main.py  pdfcat.py  pyproject.toml
src/pdfcat/: __init__.py  __main__.py  pdfcat.py
