[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pdfcat"
version = "0.1.1"
description = "A simple tool to merge multiple PDFs at the command line."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "natsort>=8.4.0",
    "pypdf>=6.1.1",
]

[project.scripts]
pdfcat = "pdfcat.pdfcat:main"
